--- a/Fotografi.html
+++ b/Fotografi.html
@@ -34,6 +34,7 @@
 					<li><a class="dropdown-item" href="Fotografi.html">Fotografi</a></li>
 					<li><a class="dropdown-item" href="Desain.html">Desain</a></li>
 					<li><a class="dropdown-item" href="Motion Grafik.html">Motion Graphic</a></li>
+					<li><a class="dropdown-item" href="Website.html">Website</a></li>
 				</ul>
 			  </li>
 			</ul>
