--- a/Website.html
+++ b/Website.html
@@ -6,7 +6,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;800&display=swap" rel="stylesheet">
-	<title>Turu</title>
+	<title>Website</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -42,21 +42,14 @@
 		</div>
 	  </nav>
 	  <div class="buffer col-12"></div>
-				<h1 class="text-center">Desain</h1>
+				<h1 class="text-center">Website</h1>
 				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#00cba9" fill-opacity="1" d="M0,160L40,144C80,128,160,96,240,80C320,64,400,64,480,85.3C560,107,640,149,720,149.3C800,149,880,107,960,80C1040,53,1120,43,1200,64C1280,85,1360,139,1400,165.3L1440,192L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
 			<header class="text-center col-12">
 			</header>
 					<div style="background-color: #00cba9;">
 						<div class="container">
 							<div class="text-center">
-								<img  class="portp" src="Street Design Plague.png">										
-								<img  class="portp" src="Daffa Ardhana Poster DGP.png">
-								<img  class="portp" src="BillBoard.png">
-								<img  class="portp" src="Lindungi lansia.jpeg">
-								<img  class="portp" src="6690182.png">
-								<img  class="portl" src="Brosur penghijauan.png">
-								<img  class="portl" src="Tag mock up.png">
-								<img  class="portp" src="Vintage.png">
+								<a href="https://freasey.github.io/Basket/Media%20Pembelajaran/Final/BUKA%20FILE%20INI%20.html"><img  class="portp" src="Screenshot 2023-08-28 163403.png"></a>										
 
 							</div>
 						</div>
